<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back1"
    tools:context=".MainActivity">

   <EditText
       android:id="@+id/age"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="150dp"
       android:hint="@string/enter_the_age"
       android:inputType="number"
       android:textAlignment="center"
       android:layout_gravity="center_horizontal"
       />
    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_back"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter"/>
    <EditText
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginTop="50dp"
        android:hint="@string/make_a_guess"
         />
    <Button
        android:id="@+id/guessbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="15dp"
        android:padding="16dp"
        android:background="@drawable/button_back"
        android:text="@string/check_if_i_am_right"/>

</LinearLayout>