<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/layout">

   <EditText
       android:id="@+id/age"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="150dp"
       android:hint="@string/enter_the_age"
       android:inputType="number"
       android:textAlignment="center"
       android:layout_gravity="center_horizontal"
       />
    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_back"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter"/>
    <EditText
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:layout_marginTop="50dp"
        android:hint="@string/make_a_guess"
         />
    <Button
        android:id="@+id/guessbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="15dp"
        android:padding="16dp"
        android:background="@drawable/button_back"
        android:text="@string/check_if_i_am_right"/>
    <TextView
        android:id="@+id/failtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:text="You failed times"/>
    <TextView
        android:id="@+id/Sucesstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="You succeeded times"/>
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back_land"
        android:text="@string/reset"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        />

</LinearLayout>